--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -553,7 +553,7 @@ en:
       question: Previous addresses
       absence_answer: *unknown
     person_phone_number:
-      question: Telephone number
+      question: Phone number
       absence_answer: *unknown
     email_keep_private:
       question: Keep the email address private
