--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -560,7 +560,7 @@ en:
       question: Previous addresses
       absence_answer: *unknown
     person_phone_number:
-      question: Telephone number
+      question: Phone number
       absence_answer: *unknown
     person_email:
       question: Email address
@@ -589,7 +589,7 @@ en:
     solicitor_address:
       question: Address
     solicitor_phone_number:
-      question: Telephone number
+      question: Phone number
     solicitor_dx_number:
       question: DX number
     solicitor_reference:
