RST-7077 - Text correction

--- a/config/locales/cya/en.yml
+++ b/config/locales/cya/en.yml
@@ -756,4 +756,4 @@ en:
     solicitor_email:
       question: Email address
     solicitor_phone_number:
-      question: Phone number
+      question: Telephone number
