--- a/config/locales/pdf/en.yml
+++ b/config/locales/pdf/en.yml
@@ -178,6 +178,9 @@ en:
     hwf_reference_number:
       question: Reference number
       absence_answer: *not_applicable
+    benefits_upload:
+      question: *details
+      answer: "[ File(s) uploaded with application ]"
     applicants_full_name:
       question: Full name of applicant(s)
     respondents_full_name:
