--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -851,9 +851,8 @@ en:
           page_title: Payment type
           lead_text: The court fee is %{fee}. Only the person applying to court (the applicant) or their solicitor needs to pay.
           interim_content_html: |
-            <p class="govuk-body"><Strong>If you have applied for Help With Fees because you are in receipt of benefits you will need to upload evidence of benefits received.</Strong></p>
-            <p class="govuk-body">We need evidence from you that you are receiving one of the benefits that make you automatically eligible for Help with Fees in order to progress your C100 application.</p>
-            <p class="govuk-body">The benefits are:</p>
+            <p class="govuk-body"><Strong><u>If you have applied for Help With Fees because you are in receipt of benefits:</u></Strong></p>
+            <p class="govuk-body">In order to progress your C100 application, you will need to upload evidence from that you are receiving one of the benefits that make you automatically eligible for Help with Fees.</p>
             <ul class="govuk-list govuk-list--bullet">
             <li>Income-based Jobseeker’s Allowance (JSA)</li>
             <li>Income-related Employment and Support Allowance (ESA)</li>
@@ -861,9 +860,28 @@ en:
             <li>Universal Credit (and you earn less than £6,000)</li>
             <li>Pension Credit (guarantee credit)</li>
             </ul>
-            <p class="govuk-body">You need to include in your upload a full breakdown letter from the Department for Work and Pensions confirming the benefit currently received by you and the income DWP considered (if applicable).</p>
-            <p class="govuk-body">Uploaded screenshots or photos of this information are acceptable. If the benefit evidence uploaded is in your partner’s name, evidence should also be provided that they share your address. You (and your partner if applicable) must be clearly identifiable on everything you upload.</p>
-            <p class="govuk-body">Before uploading this evidence, please check on your DWP paperwork that you receive the specific benefits mentioned above and not similarly named ones (such as contribution based Job Seekers Allowance, contribution-based Employment and Support Allowance and Pension Credit). If you receive Universal Credit, please check that your annual earnings before tax and National insurance are less than £6,000.</p>
+            <p class="govuk-body">Eligibility guidelines can be found via:- <a href="https://www.gov.uk/government/publications/apply-for-help-with-court-and-tribunal-fees/how-to-apply-for-help-with-fees-ex160a-for-applications-made-or-fees-paid-on-or-after-27-november-2023" class="govuk-link" rel="external" target="_blank">EX160A</a></p>
+            <p class="govuk-body"><Strong><u>What you need to provide:</u></Strong></p>
+            <p class="govuk-body">You will need to provide your most recent statement/letter from the DWP outlining your entitlement and any breakdown of your benefit entitlement.</p>
+            <p class="govuk-body"><Strong>If you have access to digital statements and/or the Universal Credit (UC) online portal</Strong>, you can obtain a copy of your UC statement by logging in and selecting 'Payments'. Locate the most recent statement, then select the option to 'print this statement' on the top right-hand side. This will generate a PDF copy of the full statement.</p>
+            <p class="govuk-body" style="color:red"><Strong>You can send screenshots as your evidence, but you will need to ensure the whole statement is included.</Strong></p>
+            <p class="govuk-body"><Strong>If you only have access to paper statements/letters</Strong>, you can send photographs or a scanned copy of your letter via email. You must send every page of the letter and it must be dated within the last 3 months. If you do not have a copy dated within 3 months, you will need to contact the DWP to request one.</p>
+            <ul class="govuk-list govuk-list--bullet">
+            <li>All evidence must clearly show your name and address</li>
+            <ul class="govuk-list govuk-list--bullet">
+            <li>If the benefit is in your partner's name, include evidence that they share your address</li>
+            </ul>
+            <li>Include all pages that are connected to the document. All text must be visible and legible</li>
+            <li>Missing pages or unclear information will invalidate the evidence, and we may request it again or reject your application</li>
+            </ul>
+            <p class="govuk-body"><Strong><u>Important</u></Strong></p>
+            <p class="govuk-body">Please ensure you receive one of the specific benefits listed above, not similarly named ones such as:</p>
+            <ul class="govuk-list govuk-list--bullet">
+            <li>Contribution-based JSA or ESA</li>
+            <li>Pension Credit (savings credit)</li>
+            <li>Income Support</li>
+            <li>If you receive Universal Credit, your annual earnings before tax and NI must be under £6,000 (equivalent to £500/month)</li>
+            </ul>
             <p class="govuk-body">If you have declared your benefit status incorrectly, and you still believe you are eligible for Help with Fees, you should reapply on the basis of income, including all benefit payments as income, unless they are explicitly excluded.</p>
             <p class="govuk-body">You can find more guidance on applying for Help with Fees here: <a href="https://www.gov.uk/get-help-with-court-fees" class="govuk-link" rel="external" target="_blank">https://www.gov.uk/get-help-with-court-fees</a></p>
       benefits_upload:
